[package]
name = "dicey"
version = "0.1.0"
edition = "2021"
description = "Can roll dice if you ask politely"
license = "WTFPL"
repository = "https://github.com/irevoire/dicey"
keywords = ["dice", "roll", "dnd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
thiserror = "1.0.31"
anyhow = "1.0.56"
atty = "0.2.14"
miette = { version = "4.7.1", features = ["fancy"] }
